working table tracker, although the tests are still a little incomplete